2011-12-11  Robert Larice
 * src/xspice/cmpp/pp_mod.c ,
 * src/xspice/cmpp/writ_ifs.c :
  #2/4 #include <ngspice/...>  -->  #include "ngspice/..."

  printf strings

2011-12-11  Robert Larice
 * **/* :
  #1/4 #include <ngspice/...>  -->  #include "ngspice/..."

  use "" instead of <> to better express project membership

  <> includes might be skipped by dependency generator tools
    assuming those being stable system include files

2011-12-11  Robert Larice
 * src/spicelib/analysis/acan.c ,
 * src/spicelib/analysis/dcpss.c ,
 * src/spicelib/analysis/dctran.c :
  use a macro to update ckt->CKTstat->STAT..

2011-12-11  Robert Larice
 * src/spicelib/**/*.c :
  auxiliary define `job' --> local variable `job'

2011-12-11  Robert Larice
 * src/spicelib/**/*.c :
  auxiliary define (ANALYSIS*) ckt->CKTcurJob  -->  `job'

2011-12-11  Robert Larice
 * src/spicelib/analysis/cktdisto.c ,
 * src/spicelib/analysis/cktpzld.c ,
 * src/spicelib/analysis/cktsens.c ,
 * src/spicelib/analysis/dctrcurv.c :
  variable rename `sen_info' `cv' `pzan' `sen_info' --> `job'

2011-12-11  Robert Larice
 * src/spicelib/analysis/dcpss.c :
  similiarity dctran.c versus dcpss.c

2011-12-03  Robert Larice
 * src/spicelib/analysis/dcpss.c ,
 * src/spicelib/analysis/dctran.c :
  cleanup, aiming for higher similarity of dctran.c and dcpss.c
  this cleanup was checked for identical object code (gcc on linux)

2011-12-03  Robert Larice
 * src/frontend/numparam/xpressn.c :
  bug fix, parameter assignment was broken for expressions containing one of '<=' '>=' or '!='

2011-12-03  Robert Larice
 * visualc/vngspice.vcproj :
  remove some unused `vcproj' dependencies

2011-11-30  Robert Larice
 * src/frontend/inpcom.c :
  bug fix, parameter processing was broken for nested .subckt

2011-11-27  Holger Vogt
 * /frontend/runcoms2.c: command 'remcirc' to remove a circuit.

2011-11-26  Holger Vogt
 * /frontend/plotting/gnuplot.c: appendwrite and complex
   variable printing added.

2011-11-13  Holger Vogt