@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.7  2011-08-20 17:49:37  rlar
+  Revision 1.8  2011-12-11 18:16:09  rlar
+  #3/4 #include <ngspice/...>  -->  #include "ngspice/..."  for adms
+
+  Revision 1.7  2011/08/20 17:49:37  rlar
   #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
 
   Revision 1.6  2011/07/23 07:57:07  dwarning
@@ -57,10 +60,10 @@
 <admst:value-of select="attribute[name='ngspicename']/value"/>
 <admst:variable name="module" select="%s"/>
 
-#include &lt;ngspice/ngspice.h&gt;
-#include &lt;ngspice/devdefs.h&gt;
+#include &quot;ngspice/ngspice.h&quot;
+#include &quot;ngspice/devdefs.h&quot;
 #include &quot;$(module)defs.h&quot;
-#include &lt;ngspice/suffix.h&gt;
+#include &quot;ngspice/suffix.h&quot;
 
 <admst:text format="IFparm $(module)pTable[] = {\n"/>
 <admst:join select="variable[parametertype='instance' and input='yes']" separator=",\n">
