@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.18  2011-08-20 17:49:37  rlar
+  Revision 1.19  2011-12-11 18:16:09  rlar
+  #3/4 #include <ngspice/...>  -->  #include "ngspice/..."  for adms
+
+  Revision 1.18  2011/08/20 17:49:37  rlar
   #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
 
   Revision 1.17  2011/01/13 17:05:46  dwarning
@@ -99,11 +102,11 @@
 #ifndef $(module)
 #define $(module)
 
-#include &lt;ngspice/cktdefs.h&gt;
-#include &lt;ngspice/ifsim.h&gt;
-#include &lt;ngspice/gendefs.h&gt;
-#include &lt;ngspice/complex.h&gt;
-#include &lt;ngspice/noisedef.h&gt;
+#include &quot;ngspice/cktdefs.h&quot;
+#include &quot;ngspice/ifsim.h&quot;
+#include &quot;ngspice/gendefs.h&quot;
+#include &quot;ngspice/complex.h&quot;
+#include &quot;ngspice/noisedef.h&quot;
 
 <admst:for-each select="variable">
 <admst:value-of select="name"/>
