@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.16  2011-08-20 17:49:37  rlar
+  Revision 1.17  2011-12-11 18:16:09  rlar
+  #3/4 #include <ngspice/...>  -->  #include "ngspice/..."  for adms
+
+  Revision 1.16  2011/08/20 17:49:37  rlar
   #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
 
   Revision 1.15  2011/08/12 15:18:41  rlar
@@ -258,14 +261,14 @@
 
 <admst:template match="code">
 
-#include &lt;ngspice/ngspice.h&gt;
-#include &lt;ngspice/cktdefs.h&gt;
-#include &lt;ngspice/smpdefs.h&gt;
+#include &quot;ngspice/ngspice.h&quot;
+#include &quot;ngspice/cktdefs.h&quot;
+#include &quot;ngspice/smpdefs.h&quot;
 #include &quot;$(module)defs.h&quot;
-#include &lt;ngspice/const.h&gt;
-#include &lt;ngspice/sperror.h&gt;
-#include &lt;ngspice/ifsim.h&gt;
-#include &lt;ngspice/suffix.h&gt;
+#include &quot;ngspice/const.h&quot;
+#include &quot;ngspice/sperror.h&quot;
+#include &quot;ngspice/ifsim.h&quot;
+#include &quot;ngspice/suffix.h&quot;
 
 #define jacobian(a,b) here-&gt;PTR_J_##a##_##b##_required=1;
 #define static_jacobian4(p,q,r,s)  jacobian(p,r) jacobian(p,s) jacobian(q,r) jacobian(q,s)
