@@ -3,7 +3,10 @@
 <!--
   $Id$
   $Log$
-  Revision 1.11  2011-08-20 17:49:37  rlar
+  Revision 1.12  2011-12-11 18:16:09  rlar
+  #3/4 #include <ngspice/...>  -->  #include "ngspice/..."  for adms
+
+  Revision 1.11  2011/08/20 17:49:37  rlar
   #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
 
   Revision 1.10  2011/08/12 15:18:41  rlar
@@ -86,14 +89,14 @@
 <admst:value-of select="attribute[name='ngspicename']/value"/>
 <admst:variable name="module" select="%s"/>
 
-#include &lt;ngspice/ngspice.h&gt;
-#include &lt;ngspice/cktdefs.h&gt;
+#include &quot;ngspice/ngspice.h&quot;
+#include &quot;ngspice/cktdefs.h&quot;
 #include &quot;$(module)defs.h&quot;
-#include &lt;ngspice/const.h&gt;
-#include &lt;ngspice/trandefs.h&gt;
-#include &lt;ngspice/sperror.h&gt;
-#include &lt;ngspice/devdefs.h&gt;
-#include &lt;ngspice/suffix.h&gt;
+#include &quot;ngspice/const.h&quot;
+#include &quot;ngspice/trandefs.h&quot;
+#include &quot;ngspice/sperror.h&quot;
+#include &quot;ngspice/devdefs.h&quot;
+#include &quot;ngspice/suffix.h&quot;
 
 /*fixme: noise not implemented in ngspice*/
 #define ngspice_flickernoise(p,n,mag,freq,info)\\
