@@ -1,4 +1,8 @@
 2011-12-11  Robert Larice
+ * src/spicelib/devices/adms/admst/ngspiceMODULE*.xml :
+  #3/4 #include <ngspice/...>  -->  #include "ngspice/..."  for adms
+
+2011-12-11  Robert Larice
  * src/xspice/cmpp/pp_mod.c ,
  * src/xspice/cmpp/writ_ifs.c :
   #2/4 #include <ngspice/...>  -->  #include "ngspice/..."
